--- a/src/app/material-component/home/home.component.html
+++ b/src/app/material-component/home/home.component.html
@@ -11,11 +11,11 @@
 
         <mat-divider></mat-divider>
 
-        <br>
+        <!-- <br>
 
         <app-user-statistics></app-user-statistics>
 
-        <mat-divider></mat-divider>
+        <mat-divider></mat-divider> -->
 
         <br>
         
