--- a/src/app/material-component/home/ranking-list/ranking-list.component.html
+++ b/src/app/material-component/home/ranking-list/ranking-list.component.html
@@ -20,8 +20,8 @@
                     </div>
         
                     <div>
-                        <span mat-line>Rank</span>
-                        <h4 mat-line>34</h4>
+                        <span mat-line>Rank / Players</span>
+                        <h4 mat-line>{{ getRankPlayerString(league.id) }}</h4>
                     </div>      
             </mat-list-item>
 
