--- a/src/app/material-component/create-new-league/create-new-league.component.html
+++ b/src/app/material-component/create-new-league/create-new-league.component.html
@@ -2,13 +2,27 @@
     <mat-card-content>
         <mat-card-title>Create a new League</mat-card-title>
         <mat-card-subtitle>Fill this form to ask us to create you a league. We will contact you back!</mat-card-subtitle>
-        <mat-vertical-stepper [linear]="isLinear" #stepper id="stepper">
+        <mat-horizontal-stepper labelPosition="bottom" [linear]="isLinear" #stepper id="stepper">
             <form [formGroup]="formGroup" (ngSubmit)="onClickSubmit(formGroup.value)">
                 <mat-step [stepControl]="formGroup.controls['firstFormGroup']">
                     <div [formGroup]="formGroup.controls['firstFormGroup']">
-                        <ng-template matStepLabel>Your League name</ng-template>
+                        <ng-template matStepLabel>Informations</ng-template>
+                        
+                        <mat-form-field>       
+                            <input matInput placeholder="Insert the name of your league" formControlName="nameCtrl" required>                 
+                        </mat-form-field>
+                        <label> </label>
                         <mat-form-field>
-                            <input matInput placeholder="League name" formControlName="nameCtrl" required>
+                            <input matInput placeholder="Where will your league take place? " formControlName="locationCtrl" required>
+                        </mat-form-field>
+                        <label> </label>
+                        <mat-form-field>
+                            <input matInput placeholder="How many players can play in your league? " formControlName="maxPlayerCtrl">
+                        </mat-form-field>
+                        <mat-form-field>
+                            <mat-select class="example-select" formControlName="sportCtrl">
+                                <mat-option value="Roundnet">Roundnet</mat-option>
+                            </mat-select>
                         </mat-form-field>
                         <div>
                             <button mat-raised-button color="accent" matStepperPrevious>Back</button>
@@ -18,7 +32,7 @@
                 </mat-step>
                 <mat-step [stepControl]="formGroup.controls['secondFormGroup']">
                     <div [formGroup]="formGroup.controls['secondFormGroup']">
-                        <ng-template matStepLabel>Your League name</ng-template>
+                        <ng-template matStepLabel>League Image</ng-template>
                         <div class="preview" *ngIf="imgFile">
                             <img [src]="imgFile" style="width:200px; height:200px; border: 1px black">
                         </div>                    
@@ -35,29 +49,24 @@
                         </div>
                     </div>
                 </mat-step>
-                <mat-step [stepControl]="formGroup.controls['thirdFormGroup']">
+                <!-- <mat-step [stepControl]="formGroup.controls['thirdFormGroup']">
                     <div [formGroup]="formGroup.controls['thirdFormGroup']">
                         <ng-template matStepLabel>Other Informations</ng-template>
-                        <label> Location </label>
-                        <mat-form-field>
-                            <input matInput placeholder="Location" formControlName="locationCtrl" required>
-                        </mat-form-field>
-                        <label> Number of players of this league </label>
-                        <mat-form-field>
-                            <input matInput placeholder="MaxPlayer" formControlName="maxPlayerCtrl">
-                        </mat-form-field>
+                        
                         <div>
                             <button mat-raised-button color="accent" matStepperPrevious>Back</button>
                             <button mat-raised-button color="warn" matStepperNext>Next</button>
                         </div>
                     </div>
-                </mat-step>
+                </mat-step> -->
                 <mat-step [stepControl]="formGroup.controls['fourthFormGroup']">
                     <div [formGroup]="formGroup.controls['fourthFormGroup']">
-                        <ng-template matStepLabel>When should the league end</ng-template>
-    <!--                         <input matInput placeholder="Places" formControlName="fourthCtrl" required>
-     -->                        <label>End of the league</label>
-                                <input [matDatepicker] placeholder="" id="date" name="date" formControlName="endDateCtrl" required>
+                        <ng-template matStepLabel>End of the league</ng-template>
+                                <mat-form-field>
+                                    <input matInput [matDatepicker]="picker" id="date" placeholder="When should the league end ?" name="date" formControlName="endDateCtrl" required>
+                                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                    <mat-datepicker #picker></mat-datepicker>
+                                </mat-form-field>
                         <div>
                             <button mat-raised-button color="accent" matStepperPrevious>Back</button>
                             <button mat-raised-button color="warn" matStepperNext>Next</button>
@@ -75,6 +84,6 @@
                     </div>
                 </mat-step>
             </form>   
-        </mat-vertical-stepper>
+        </mat-horizontal-stepper>
     </mat-card-content>
 </mat-card>    
