--- a/src/app/material-component/league/matches-view/matches-view.component.html
+++ b/src/app/material-component/league/matches-view/matches-view.component.html
@@ -28,7 +28,7 @@
                                   </mat-chip-list>
                             </div>
                             <br>
-                            <button mat-raised-button class="report-button" (click)="openDialog()">
+                            <button mat-raised-button class="report-button" (click)="openDialog(match)">
                                 <mat-icon> report </mat-icon>
                                 Report
                             </button>
