reports-view refactored

--- a/src/app/material-component/admin-section/admin-section.component.html
+++ b/src/app/material-component/admin-section/admin-section.component.html
@@ -2,9 +2,10 @@
     <mat-card-content>
         <mat-tab-group mat-align-tabs="center" >
             <mat-tab *ngFor="let league of managed_leagues" label="{{league.name}}">
+                <br>
                 <button mat-button type="button" class="block" color="primary">Create A Special Event</button>
                 <br>
-                <button mat-button type="button" class="block" color="primary" routerLink="/reports">Review Matches</button>
+                <button mat-button type="button" class="block" color="primary" routerLink="/reports/{{league.id}}">Review Matches</button>
                 <br>
                 <button mat-button type="button" class="block" color="primary">Review Requests</button>
                 <br>
