--- a/src/app/material-component/admin-section/review-match/review-match.component.html
+++ b/src/app/material-component/admin-section/review-match/review-match.component.html
@@ -1,5 +1,8 @@
 <mat-card>
-    <mat-card-title> Review Match</mat-card-title>
+    <mat-card-title>Review Match #{{match.id}}</mat-card-title>
+    <mat-card-subtitle>
+        
+    </mat-card-subtitle>
     <mat-card-content>
         <div>
             <label> Winners 
