started to refactoring review-match

--- a/src/app/material-component/admin-section/report-message-view/report-message-view.component.html
+++ b/src/app/material-component/admin-section/report-message-view/report-message-view.component.html
@@ -16,7 +16,7 @@
                     <div class="error-type">
                         Error type : {{reportService.getReportTypeString(report.type)}}
                     </div>
-                    <button mat-raised-button color="accent" class="review-match-button" routerLink="review/{{report.match_id}}"> 
+                    <button mat-raised-button color="accent" class="review-match-button" routerLink="/{{league_id}}/report/{{report.match_id}}"> 
                         Review Match 
                         <mat-icon>arrow_right</mat-icon>
                     </button>
